istio/tests/plaintext-client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: plaintext-client
  namespace: default
  annotations:
    sidecar.istio.io/inject: "false"
spec:
  containers:
    - name: curl
      image: curlimages/curl:8.10.1
      command:
        - sh
        - -c
        - sleep 3600
  restartPolicy: Never
